--- a/app/src/main/res/layout/activity_register_local_user.xml
+++ b/app/src/main/res/layout/activity_register_local_user.xml
@@ -134,7 +134,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editText_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -142,7 +142,8 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
-            android:padding="8dp" />
+            android:padding="8dp"
+            app:passwordToggleEnabled="true"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
