Revert "Merge branch 'main' of https://github.com/SManeesha99/CSSE_SEJ010_WD_04_MOBILE"
This reverts commit 2e7510b35991561af0d5dee4a992c7cbe603281c, reversing
changes made to 5f458e3af36d6e7650e0d181ecd832dd95b6d88d.

--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -14,6 +14,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/bottom"/>
 
+    <ImageView
+        android:id="@+id/header"
+        android:layout_width="411dp"
+        android:layout_height="204dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/up" />
+
     <Button
         android:id="@+id/localUser_btn"
         android:layout_width="263dp"
@@ -43,15 +52,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.546" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="412dp"
-        android:layout_height="159dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/upn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
