--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,44 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login">
+    tools:context=".Login"
+    android:background="#DDDDDD">
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView16"
+            android:layout_width="410dp"
+            android:layout_height="157dp"
+            android:layout_marginBottom="28dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/upn" />
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="900px"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="90px"
-            android:layout_marginRight="90px"
-            >
+            android:orientation="vertical"
+            android:padding="20dp">
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20px"
-                android:textAlignment="center"
                 android:text="Local User"
-                android:textColor="#000000"
-                android:textSize="80px"
+                android:textAlignment="center"
+                android:textColor="#3F51B5"
+                android:textSize="50sp"
                 android:textStyle="bold">
 
             </TextView>
 
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="?android:attr/listDivider" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20px"
-                android:text="Login in"
-                android:textColor="#000000"
-                android:textSize="50px"
-                android:textStyle="bold">
+                android:fontFamily="@font/poppins_medium"
+                android:text="Login In"
+                android:textAlignment="center"
+                android:textColor="#2196F3"
+                android:textSize="30sp">
 
             </TextView>
 
@@ -47,11 +66,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="170px"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/btnback"
                 android:hint="Email"
+                android:padding="10dp"
                 android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
+                android:textSize="23sp" />
 
 
             <EditText
@@ -59,32 +78,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="170px"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/btnback"
                 android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="10dp"
                 android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:inputType="textPassword"/>
+                android:textSize="23sp" />
 
             <Button
                 android:id="@+id/Login_btn"
                 android:layout_width="match_parent"
                 android:layout_height="160px"
-                android:backgroundTint="#8B51F5"
+                android:layout_marginTop="30px"
+                android:backgroundTint="#3F51B5"
                 android:text="Login"
                 android:textColor="@color/white"
                 android:textSize="45px"
                 android:textStyle="bold"
-                app:cornerRadius="30dp"
-                android:layout_marginTop="30px"
-                >
+                app:cornerRadius="30dp">
 
             </Button>
 
 
-
-
-
         </LinearLayout>
 
-    </ScrollView>
-</LinearLayout>
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="411dp"
+            android:layout_height="179dp"
+            app:srcCompat="@drawable/bottom" />
+
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
