--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#BEE3F4"
     tools:context=".Home">
 
     <ScrollView
@@ -13,19 +14,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="50dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/user_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="50dp"
                 android:layout_marginTop="20px"
                 android:layout_marginBottom="20dp"
-                android:text="Hi Ava,"
-                android:layout_marginLeft="50dp"
-                android:textColor="#000000"
-                android:textSize="50px"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Hi,"
+                android:textColor="#06104A"
+                android:textSize="24sp"
                 android:textStyle="bold">
 
             </TextView>
@@ -35,34 +37,44 @@
                 android:layout_width="300dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:backgroundTint="#8B51F5"
+                android:backgroundTint="#3F51B5"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Scan QR - Source"
-                android:textSize="30dp"
-                android:textColor="#ffffff"></Button>
+                android:textColor="#ffffff"
+                android:textSize="30dp" />
 
             <Button
                 android:id="@+id/qrscan_btn2"
                 android:layout_width="300dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:backgroundTint="#8B51F5"
+                android:backgroundTint="#3F51B5"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Scan QR - Destination"
-                android:textSize="30dp"
-                android:textColor="#ffffff"></Button>
+                android:textColor="#ffffff"
+                android:textSize="30dp" />
 
             <Button
                 android:id="@+id/logout"
                 android:layout_width="300dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:backgroundTint="#8B51F5"
+                android:backgroundTint="#3F51B5"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Logout"
-                android:textSize="30dp"
-                android:textColor="#ffffff"></Button>
+                android:textColor="#ffffff"
+                android:textSize="30dp" />
 
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="411dp"
+                android:layout_height="179dp"
+                app:srcCompat="@drawable/bottom" />
 
 
         </LinearLayout>
+
+
 
     </ScrollView>
 
